<resources>
    <string name="app_name">bars</string>
    <string name="rights_sec_par1">Приложение хранит ваш логин и пароль от личного кабинета БАРС в зашифрованном виде на вашем устройстве. Данные ни в каком виде не могут быть переданы в аналитические сервисы или третьим лицам кроме случаев из п. «‎Отказ от ответственности».</string>
    <string name="rights_sec_par2">После выхода из учетной записи данные о логине и пароле полностью стираются с устройства, после чего приложение MPEIX более не может получить к ним доступ.</string>
    <string name="rights_sec_head">Безопасность данных для входа в учетную запись</string>
    <string name="rights_head">Условия использования приложения MPEIX для входа в систему БАРС</string>
    <string name="rights_cons_par1">Разработчик полностью снимает с себя ответственность за утечку данных о логине и пароле в том случае, если приложение MPEIX используется на устройстве с root-правами, либо в публичной Wi-Fi сети, в которой возможен перехват трафика пользователя злоумышленниками.</string>
    <string name="rights_cons_par2">Так же ваши данные защищает тот факт, что ваш логин и пароль от БАРС скорее всего никому кроме вас не нужны.</string>
    <string name="rights_cons_head">Отказ от ответственности</string>
</resources>
